# zzol-back

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/controllers/v1/: auth_controller.py  member_controller.py
app/db/: database.py
app/model/: member.py
app/schemas/: auth.py  member.py  response.py
app/services/: auth.py  member.py
